Revision history for Perl module Net::Curl::Promiser

0.13
- BUG FIX: Allow reuse of $easy within a promise callback.
- Refactor to avoid memory leaks; add detection logic (on by default).

0.12 Sun 5 Jul 2020
- Fix regression in IO::Async test.

0.11 Sat 4 Jul 2020
- Make fail_handle() and cancel_handle() detect non-pending requests.
- Make cancel_handle() act immediately rather than on the next
  event loop run. This fixes a bug that caused the event loop to hang.

0.10 Sat 9 May 2020
- Make event loop tests use distributed (pure-Perl) event loops.
- Tweak internal debug code

0.09 Fri 8 May 2020
- Add cancel_handle() method.
- Lazy-load modules platform-neutrally (rather than assuming *nix).
- Tweak docs wording.

0.08 Wed 26 Feb 2020
- Remove redundant stat() checks on file descriptors.
- Clarify event loop requirement not to close FDs.

0.07 Thu 6 Feb 2020
- Fix race conditions in AnyEvent and IO::Async.
- Ignore extra stop-poll callbacks. This appears to have been an issue
  with old libcurl versions (e.g., 7.29); there seems no reason to care.
- IO::Async - Prevent Perl from closing FDs that libcurl expects to use.
- Make tests work with Promise::XS.
- Tests now print the version of the event loop being used.

0.06 Fri 31 Jan 2020
- Add experimental Promise::XS support.
- setopt() now fails if given CURLMOPT_SOCKETFUNCTION or CURLMOPT_SOCKETDATA.
- Skip Mojo tests if Mojo::Promise->new() can’t take a callback. (Fixed in
  Mojolicious 8.15.)
- Clarify in documentation that unless you’re managing a custom event loop
  most of the N::C::P interface isn’t relevant.
- Drop Perl 5.8 support.

0.05 Wed 10 Dec 2019
- Add add_handle_p() to Mojo module.
- Update examples/mojo.pl and POD example to be more idiomatic.

0.04 Wed 10 Dec 2019
- Fix glaring, prominent typo in Mojo module.

0.03 Wed 10 Dec 2019
- Make Mojo module use Mojo::Promise rather than Promise::ES6.
- Remove incorrect text about Mojo module’s status.

0.02 Wed 4 Dec 2019